--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -29,3 +29,4 @@
 @import "./components/contact";
 @import "./components/contgen";
 @import "./components/contlinks";
+@import "./components/histmob";
