--- a/assets/scss/components/_general.scss
+++ b/assets/scss/components/_general.scss
@@ -11,7 +11,10 @@
     }
     .wbot {
 
-        height: 80vh;    
+        height: 80vh;
+        @include fullhd {
+            height: unset;
+        }    
         position: relative;
         background: linear-gradient(96.95deg, rgba(0, 42, 85, 0.68) 24.05%, rgba(0, 42, 85, 0) 57.46%), linear-gradient(79.3deg, #002A55 26.57%, rgba(0, 42, 85, 0.76) 51.95%, rgba(12, 37, 94, 0) 88.87%), url("/assets/img/images/fura.png"), #003B77;
         background-size: cover;
@@ -196,3 +199,15 @@
 
 
 // О компании
+.efcompany {
+    position: relative;
+    top: 50px;
+    .efcompanytext {
+
+    }
+
+}
+
+.efcompanybutton {
+    padding-top: 20px;
+}
