--- a/assets/scss/components/_company.scss
+++ b/assets/scss/components/_company.scss
@@ -51,13 +51,15 @@
                 }
             }
             .dot {
+                
                 position: absolute;
                 &__text {
+                    width: max-content;
                     position: absolute;
                     background-color: var(--color-white);
                     gap: 10px;
-                    border-top-left-radius: 6px;
-                    border-bottom-left-radius: 6px;
+                    // border-top-left-radius: 6px;
+                    // border-bottom-left-radius: 6px;
                     box-shadow: 0px 2px 8px rgba(76, 123, 135, 0.2);
                     
                     &-title {
@@ -78,15 +80,21 @@
                top: 190px;
                left: 130px;
                 &__text {
-                    width: 137px;
-                    padding: 8px 12px 8px 12px;
-                    top: -78px;
-                    right: 18px;
+                    // width: 137px;
+                    // padding: 8px 12px 8px 12px;
+                    // top: -95px;
+                    // right: 16px;
                 }
+                
+                
             }
+
             &-map {
                 margin-top: 60px;
             }
+
+
+
         }
         &__link {
             display: flex;
@@ -109,3 +117,85 @@
 
 
 
+.mapleft {
+    position: absolute;
+    width: 137px;
+    padding-left: 8px;
+    padding-right: 8px;
+    top: -42px;
+    right: 16px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+.mapright {
+    position: absolute;
+    width: 137px;
+
+    padding-left: 8px;
+    padding-right: 8px;
+    top: -42px;
+    right: -118px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    border-top-left-radius: 6px;
+}
+
+.dot2 {
+    left: 853px;
+    top: 256px;
+    &__text {
+        
+    }
+}
+.dot3 {
+    
+    left: 683px;
+    top: 418px;
+
+}
+.dot4 {
+    left: 1176px;
+    top: 590px;
+    &__text {
+        left: 20px;
+        
+    }
+}
+.dot5 {
+    left: 432px;
+    top: 629px;
+}
+.dot__text {
+    height: 62px;
+    display: flex;
+    flex-direction: column;
+    &-title {
+        margin-bottom: 0;
+        margin-top: 8px;
+        
+
+    }
+    &-subtitle {
+        margin: 0;
+        margin-bottom: 8px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        display: inline-block;
+    }
+}
+
+
+.dot {
+    &:hover {
+        .dot__text {
+            visibility: visible;
+            opacity: 100%;
+            transition: ease-in-out 0.1s;
+        }
+    }
+    &__text {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
