--- a/assets/scss/components/_history.scss
+++ b/assets/scss/components/_history.scss
@@ -1,6 +1,9 @@
 .history {
     margin-top: 140px;
     margin-bottom: 140px;
+    @include st {
+        display: none;
+    }
     .hcont {
         max-width: 1456px;
         margin-left: auto;
