--- a/assets/scss/components/_newsgen.scss
+++ b/assets/scss/components/_newsgen.scss
@@ -13,6 +13,10 @@
             max-width: 1456px;
             margin-right: auto;
             margin-left: auto;
+            @include st {
+                max-width: 374px;
+
+            }
             &__text {
                 display: flex;
                 margin: auto;
@@ -47,13 +51,22 @@
                         // position: absolute;
                         // transform: translate(380px,-69px);
                         padding-top: 80px;
+                        
                         margin: 0px 0 0 0;
                         padding-bottom: 40px;
+                        @include st {
+                            padding-top: 0;
+                            margin-top: 50px;
+                        }
                         &__title {
                             text-transform: uppercase;
                             font-size: 60px;
                             margin: 0;
-                            
+                            @include st {
+                                font-size: 34px;
+                                position: relative;
+                                bottom: 100px;
+                            }
                             padding-bottom: 40px;
                             
 
@@ -64,7 +77,11 @@
                             line-height: 25px;
                             width: 718px;
                             margin: 0;
-                            
+                            @include st {
+                                font-size: 16px;
+                                width: unset;
+                                line-height: 22px;
+                            }
                         }
                         &__button {
                             gap: 10px;
@@ -98,6 +115,9 @@
                     }
                 }
                 &__social {
+                    @include st {
+                        display: none;
+                    }
                     gap: 60px;
                     display: flex;
                     margin-left: auto;
@@ -109,6 +129,9 @@
                     }
                 }
                 &__messenger {
+                    @include st {
+                        display: none;
+                    }
                     background-color: #012B56;
                     border-radius: 50px;
                     padding: 10px;
