--- a/assets/scss/components/_objectives.scss
+++ b/assets/scss/components/_objectives.scss
@@ -5,23 +5,37 @@
         margin-right: auto;
         margin-top: 140px;
         margin-bottom: 140px;
+        @include st {
+            max-width: 374px;
+        }
         &__text {
             display: flex;
             align-items: center;
             margin-left: 846px;
             position: relative;
-            
+            @include st {
+                margin-left: 0;
+            }
             &-title {
                 color: var(--color-text);
                 font-weight: 400;
                 z-index: 20;
                 width: 664px;
-                
+                @include st {
+                    font-size: 22px;
+                    font-weight: 400;
+                    line-height: 30px;
+                }
 
             }
             &-image {
                 position: absolute;
                 left: -50px;
+                @include st {
+                    width: 130px;
+                    top: 30px;
+                    left: 0;
+                }
             }
             
         }
