--- a/assets/scss/components/_servgen.scss
+++ b/assets/scss/components/_servgen.scss
@@ -8,9 +8,12 @@
         position: relative;
         background: linear-gradient(300.95deg, rgba(0, 42, 85, 0.68) 22.05%, rgba(0, 42, 85, 0) 57.46%), linear-gradient(79.3deg, #002A55 26.57%, rgba(0, 42, 85, 0.76) 51.95%, rgba(12, 37, 94, 0) 88.87%), url("/assets/img/images/acontainer.jpg"), #003B77;
         background-size: cover;
-        
+
         background-position: top;
         .ccont {
+            @include st {
+                max-width: 374px;
+            }
             max-width: 1456px;
             margin-right: auto;
             margin-left: auto;
@@ -24,6 +27,9 @@
             &__desc {
                 position: relative;
                 padding-top: 131px;
+                @include st {
+                    padding-top: 40px;
+                }
                 &-title {
                     
                     margin: 0;
@@ -49,6 +55,9 @@
                         // transform: translate(380px,-69px);
                         margin: 0px 0 0 0;
                         &__title {
+                            @include st {
+                                font-size: 30px;
+                            }
                             text-transform: uppercase;
                             font-size: 60px;
                             margin: 0;
@@ -58,6 +67,13 @@
 
                         }
                         &__text {
+                            @include st {
+                                width: unset;
+                                font-size: 16px;
+                                font-weight: 400;
+                                line-height: 22px;
+                                margin-top: 50px;
+                            }
                             font-weight: 400;
                             font-size: 18px;
                             line-height: 25px;
@@ -82,6 +98,9 @@
                     }
             }
             .cbut {
+                @include st {
+                    display: none;
+                }
                 display: flex;
                 margin-top: 90px;
                 padding-bottom: 20px;
